--- a/configs/default_AG.yaml
+++ b/configs/default_AG.yaml
@@ -5,8 +5,8 @@
 # parameters
 
 paths:
-  - gnps_job_id: 250536f4cb3e4f159e5ef67a3d024fac # The path were you want your folder to be placed
-  - project_name: ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
+  - gnps_job_id: f8c981fe7fed4b0482667a76731f5b65 # LP: 250536f4cb3e4f159e5ef67a3d024fac # The path were you want your folder to be placed
+  - project_name: ISDB_annot_pma_set #ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
   - metadata_path: db_metadata/210523_lotus_dnp_metadata.csv  # Path to your spectral library file
   - db_file_path: db_spectra/LOTUS_DNP_ISDB.mgf # Path to the metadata of the spectral file
   - adducts_pos_path: data_loc/db_prepared_pos.tsv.gz # Path to the adducts file in pos mode
