--- a/configs/default_AG.yaml
+++ b/configs/default_AG.yaml
@@ -5,8 +5,8 @@
 # parameters
 
 paths:
-  - gnps_job_id: f8c981fe7fed4b0482667a76731f5b65 # LP: 250536f4cb3e4f159e5ef67a3d024fac # The path were you want your folder to be placed
-  - project_name: ISDB_annot_pma_set #ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
+  - gnps_job_id: 250536f4cb3e4f159e5ef67a3d024fac # The path were you want your folder to be placed
+  - project_name: ISDB_leonie_plantfungi #ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
   - metadata_path: db_metadata/210523_lotus_dnp_metadata.csv  # Path to your spectral library file
   - db_file_path: db_spectra/LOTUS_DNP_ISDB.mgf # Path to the metadata of the spectral file
   - adducts_pos_path: data_loc/db_prepared_pos.tsv.gz # Path to the adducts file in pos mode
@@ -27,6 +27,6 @@ repond_params:
   - sampletype_header: 'SAMPLE_info' # Optional (Run_line_x_line parameter)
   - use_post_taxo: True # Set True if you want to use rank after taxonomical reweighting for consensus chemical class determination, else set to False
   - top_N_chemical_consistency: 15 # Top N to use for chemical consistency 
-  - file_extension: '.mzXML' # MS filename extension (or any common pattern in all your MS filenames)
-  - msfile_suffix: ' Peak area' # MS filename suffix (for example ' Peak area') to remove to match with metadata, empty if nothing to remove
+  - file_extension: 'LP' # MS filename extension (or any common pattern in all your MS filenames)
+  - msfile_suffix: '' # MS filename suffix (for example ' Peak area') to remove to match with metadata, empty if nothing to remove
   - min_score_ms1: 4 # Minimum taxonomical score (4 = order, 5 = family, 6 = genus, 7 = species)
