--- a/configs/default_AG.yaml
+++ b/configs/default_AG.yaml
@@ -6,7 +6,7 @@
 
 paths:
   - gnps_job_id: 250536f4cb3e4f159e5ef67a3d024fac # The path were you want your folder to be placed
-  - project_name: ISDB_leonie_plantfungi #ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
+  - project_name: ISDB_leonie_plantfungi_bis #ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
   - metadata_path: db_metadata/210523_lotus_dnp_metadata.csv  # Path to your spectral library file
   - db_file_path: db_spectra/LOTUS_DNP_ISDB.mgf # Path to the metadata of the spectral file
   - adducts_pos_path: data_loc/db_prepared_pos.tsv.gz # Path to the adducts file in pos mode
@@ -29,4 +29,4 @@ repond_params:
   - top_N_chemical_consistency: 15 # Top N to use for chemical consistency 
   - file_extension: 'LP' # MS filename extension (or any common pattern in all your MS filenames)
   - msfile_suffix: '' # MS filename suffix (for example ' Peak area') to remove to match with metadata, empty if nothing to remove
-  - min_score_ms1: 4 # Minimum taxonomical score (4 = order, 5 = family, 6 = genus, 7 = species)
+  - min_score_ms1: 5 # Minimum taxonomical score (4 = order, 5 = family, 6 = genus, 7 = species)
