--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -4,14 +4,14 @@
 ---
 # parameters
 
-job:
-  - job_id: enterjobidhere # The path were you want your folder to be placed
-  
+options:
+  - download_gnps_job: False
+  - do_spectral_match: True
 paths:
-  - gnps_job_path: / # The path were you want your folder to be placed
-  - project_name: ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
-  - metadata_path: db_metadata/210523_lotus_dnp_metadata.csv  # Path to your spectral library file
-  - db_file_path: db_spectra/LOTUS_DNP_ISDB.mgf # Path to the metadata of the spectral file
+  - gnps_job_id: fbbf3bf61b2a4c54af603cb79ca4fb62 # The path were you want your folder to be placed
+  - project_name: Bg_pos #ISDB_annot_LP_plantfungi_set # The name you want to give to your project, output resulst in data_out/project_name
+  - metadata_path: /Users/pma/210523_lotus_dnp_metadata.csv  # Path to your spectral library file
+  - db_file_path: /Users/pma/MultiSources_ISDB_pos.mgf # Path to the metadata of the spectral file
   - adducts_pos_path: data_loc/db_prepared_pos.tsv.gz # Path to the adducts file in pos mode
   - adducts_neg_path: data_loc/db_prepared_neg.tsv.gz # Path to the adducts file in neg mode
 
@@ -19,17 +19,17 @@ spectral_match_params:
   - parent_mz_tol: 0.01 # the parent mass tolerance to use for spectral matching (in Da)
   - msms_mz_tol: 0.01 # the msms mass tolerance to use for spectral matching (in Da)
   - min_cos: 0.3 # the minimal cosine to use for spectral matching
-  - min_peaks: 8 # the minimal matching peaks number to use for spectral matching
+  - min_peaks: 6 # the minimal matching peaks number to use for spectral matching
 
 repond_params:
-  - Run_line_x_line: True # Set to True if multiple biosource in your dataset
-  - Top_N_Sample: 3 # Max number of contributors to take into account for taxo reponderation (Run_line_x_line parameter), set to 0 for all
+  - Top_N_Sample: 3 # Max number of contributors to take into account for taxo reponderation, set to 0 for all
   - top_to_output: 1 # Top X for final ouput
   - ppm_tol: 2 # ppm tol to be used for ms1 match
-  - polarity: 'Pos' # ion mode you are working with (pos or neg)
-  - organism_header: 'ATTRIBUTE_Species' # Mandatory (Run_line_x_line parameter) 
+  - polarity: 'pos' # ion mode you are working with (pos or neg)
+  - organism_header: 'ATTRIBUTE_Species' # Mandatory: header of your samples' organism in metadata file
   - sampletype_header: 'SAMPLE_info' # Optional (Run_line_x_line parameter)
   - use_post_taxo: True # Set True if you want to use rank after taxonomical reweighting for consensus chemical class determination, else set to False
   - top_N_chemical_consistency: 15 # Top N to use for chemical consistency 
-  - file_extension: '.mzXML' # MS filename extension (a common pattern in all your filenames) Check the header of your feature table if you dont know (Run_line_x_line parameter)
-  - msfile_suffix: ' Peak area' # MS filename additional chracters (a common pattern in all your filenames) Check the header of your feature table if you dont know (Run_line_x_line parameter)
+  - file_extension: '.mzML' # MS filename extension (or any common pattern in all your MS filenames)
+  - msfile_suffix: ' Peak Area' # MS filename suffix (for example ' Peak area') to remove to match with metadata, empty if nothing to remove
+  - min_score_ms1: 5 # Minimum taxonomical score (4 = order, 5 = family, 6 = genus, 7 = species)
