--- a/configs/default/default.yaml
+++ b/configs/default/default.yaml
@@ -34,4 +34,6 @@ repond_params:
   - top_N_chemical_consistency: 15 # Top N to use for chemical consistency 
   - file_extension: '.mzML' # MS filename extension (or any common pattern in all your MS filenames)
   - msfile_suffix: ' Peak Area' # MS filename suffix (for example ' Peak area') to remove to match with metadata, empty if nothing to remove
-  - min_score_ms1: 5 # Minimum taxonomical score (4 = order, 5 = family, 6 = genus, 7 = species)
+  - min_score_taxo_ms1: 6 # Minimum taxonomical score (5 = order, 6 = family, 7 = genus, 8 = species)
+  - min_score_chemo_ms1: 1 # Minimum chemical consistency score 
+
