--- a/.gitignore
+++ b/.gitignore
@@ -458,3 +458,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,intellij,pycharm,macos,linux,windows
+
+.history
